--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^16.0.0
   font_awesome_flutter: ^10.8.0
+  flutter_bloc: ^9.1.1
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
